fix: adjust spacing and background styles in NavBarDoc and ThemeSwitcher for improved visual consistency

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
     --primary: 60 9.1% 3%;
     --primary-foreground: 360 100% 0%;
 
-    --secondary: 240 10% 85%;
+    --secondary: 240 50% 85%;
     --secondary-foreground: 240 10% 40%;
 
     --muted: 240 16.5% 85%;
